Fixed issue where page has a long list of invisible elements

--- a/timelineviewer/static/timelineviewer/css/viewer.css
+++ b/timelineviewer/static/timelineviewer/css/viewer.css
@@ -14,6 +14,10 @@ body {
 	visibility: hidden;
 }
 
+.absolute {
+	position: absolute;
+}
+
 .event-text {
 	font-size: 10px;
 	width: 180px;
